Fixed screen position jumping to the top of the build when changing an item quantity.
Fixed missing information icon.
Changed the size of the notification toasts to not exceed half of the screen width.

--- a/src/components/notification/NotificationComponent.css
+++ b/src/components/notification/NotificationComponent.css
@@ -1,9 +1,9 @@
 .notification-toast {
   bottom: 0;
-  left: 0;
+  right: 0;
   margin-left: 1rem;
   margin-right: 1rem;
   position: fixed;
-  width: calc(100% - 2rem);
+  max-width: calc(50% - 2rem);
   z-index: 2;
 }
